--- a/styles.css
+++ b/styles.css
@@ -241,12 +241,6 @@ button:hover {
     font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
-.subStat {
-    font-size: 12px;
-    margin: 5px;
-}
-
-
 #menuButtons {
     display: flex;
 
@@ -281,6 +275,48 @@ button:hover {
     cursor: pointer;
 }
 
+#smallMenu {
+    position: fixed;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 1000;
+
+    background-color: rgba(58, 58, 60, .9);
+    border: 2px solid white;
+    border-radius: 15px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 10vh;
+    width: 300px;
+
+    display: none;
+}
+
+.smallMenuOption {
+    font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+    font-weight:400;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0px auto;
+
+    width: 40%;
+    height:80%;
+    border: 1.5px white solid;
+    border-radius: 15px;
+}
+
+.smallMenuOption:hover {
+    scale: 1.05;
+    cursor: pointer;
+    background-color: rgba(58, 58, 60, .98);
+}
 
 @media (max-width: 1050px) {
 
@@ -311,3 +347,4 @@ button:hover {
         font-size: 10px;
     }
 }
+
